BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop (#1300)
* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop

* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop

* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop

* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop

* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop

* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop

* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop

* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop

* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop

* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop

* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop

* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop

* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop

* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop

* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop